# five_crowns

./: CMakeLists.txt  Card.cpp  Card.h  CardCollection.h  CardInterface.h  CardPile.cpp  CardPile.h  Computer.cpp  Computer.h  DataLayer.cpp  DataLayer.h  Deck.cpp  Deck.h  DiscardPile.cpp  DiscardPile.h  DrawPile.cpp  DrawPile.h  Game.cpp  Game.h  Human.cpp  Human.h  ISave.cpp  Joker.cpp  Joker.h  Player.cpp  Player.h  Round.cpp  Round.h  Serialization.cpp  Serialization.h  main.cpp
